# Codey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh  test_cody.sh  testresult.txt
src/codey/: __init__.py  project.py
src/cody/: __init__.py  api_ui.py  config.py  llm.py  memory.py  sandbox.py  status.py  tcp_server.py
tests/: __init__.py  test_api_ui.py  test_docker_policy.py  test_llm.py  test_memory.py  test_project.py  test_status.py  test_tcp_protocol.py
